fix: fix z-index of ui controls

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   position: absolute;
   top: 5%;
   left: 5%;
+  z-index: 999;
 }
 
 .appOptions div.button button {
